Corrected spacing on header

--- a/style.css
+++ b/style.css
@@ -17,9 +17,14 @@ body {
 
 .header-top {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     flex: 1 0 auto;
+    margin-left: -500px;
+}
+
+.header-top > div {
+    margin-left: 500px;
 }
 
 
